# validationtask

./: README.md
Atroshenko/: CMakeLists.txt  err_handling.cpp  err_handling.h  hash_counting.cpp  hash_counting.h  main.cpp
